@@ -23,6 +23,14 @@ ImageMagick Changes</font></font></font></b></td>
 <dl>
 <dd>
 <pre>
+2002-05-09  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * DCM patch provided by Shane Blackett.
+
+2002-05-07  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
+  * Lock mutex when destorying a SemaphoreInfo structure (patch provided
+    by William Radcliffe).
+  * Added mingw patches provided by Derry Bryson.
+
 2002-05-05  Cristy  &lt;cristy@mystic.es.dupont.com&gt;
   * ImageMagick, version 5.4.5-1 released.
 
